# eclogues

./: .gitignore  HLint.hints  LICENSE  README.md  aurora-rest.cabal  aurora-thrift.cabal  circle.yml  doc-index.html  eclogues.cabal  gen-hs-fixes.patch  index-frames.html  index.html  release.sh  stack.yaml  thrift-fixes.patch
.halcyon/: constraints  sandbox-sources
app/api/: Main.hs
app/api/Eclogues/: ApiDocs.hs  AppConfig.hs  Persist.hs  State.hs
app/api/Eclogues/Monitoring/: Cluster.hs  Graphite.hs  Monitor.hs
app/api/Eclogues/Persist/: Stage1.hs
app/api/Eclogues/Scheduling/: AuroraAPI.hs  AuroraConfig.hs  AuroraZookeeper.hs  Command.hs
app/api/Eclogues/State/: Monad.hs  Types.hs
app/api/Eclogues/Threads/: Server.hs  Update.hs
app/client/: Main.hs
app/client/Eclogues/: Client.hs
app/client/Eclogues/Client/: Instances.hs
app/mock/: Mock.hs  MockMain.hs
app/mock/Eclogues/: Mock.hs
app/subexecutor/: Main.hs
eclogues/: Eclogues-API.html  Eclogues-Job.html  Eclogues-ServantInstances.html  doc-index.html  eclogues.cabal  eclogues.haddock  index-frames.html  index.html  mini_Eclogues-API.html  mini_Eclogues-Job.html  mini_Eclogues-ServantInstances.html
eclogues-impl/: eclogues-impl.cabal  gen-hs-fixes.patch
eclogues-impl/app/api/: Main.hs
eclogues-impl/app/api/Eclogues/: APIElection.hs  AppConfig.hs  Persist.hs  State.hs
eclogues-impl/app/api/Eclogues/Monitoring/: Monitor.hs
eclogues-impl/app/api/Eclogues/Persist/: Stage1.hs
eclogues-impl/app/api/Eclogues/Scheduling/: AuroraAPI.hs  AuroraConfig.hs  AuroraZookeeper.hs  Command.hs  Run.hs
eclogues-impl/app/api/Eclogues/State/: Monad.hs  Types.hs
eclogues-impl/app/api/Eclogues/Threads/: Server.hs  Update.hs
eclogues-impl/app/client/: Main.hs
eclogues-impl/app/client/Eclogues/: Client.hs
eclogues-impl/app/mock/: MockMain.hs
eclogues-impl/app/mock/Eclogues/: Mock.hs
eclogues-impl/app/subexecutor/: Main.hs
eclogues-impl/gen-hs/: Api_Types2.hs  AuroraAdmin_Client.hs  AuroraAdmin_Iface.hs  AuroraSchedulerManager.hs  ReadOnlyScheduler_Client.hs
eclogues-impl/src/Database/Zookeeper/: Election.hs
eclogues-impl/src/Eclogues/: Util.hs
eclogues-impl/test/: HLint.hs  StateSpec.hs  TestUtils.hs
eclogues-impl/test/Eclogues/: APIElectionSpec.hs  JobSpec.hs  MockSpec.hs  StateSpec.hs
eclogues-impl/test/Eclogues/Monitoring/: ClusterSpec.hs
eclogues-impl/test/Eclogues/Scheduling/: AuroraConfigSpec.hs  CommandSpec.hs  RunSpec.hs
eclogues-mock/: eclogues-mock.cabal
eclogues-mock/src/Eclogues/: ApiDocs.hs  AppConfig.hs  Mock.hs  Persist.hs  State.hs  Util.hs
eclogues-mock/src/Eclogues/Monitoring/: Cluster.hs
eclogues-mock/src/Eclogues/Scheduling/: Command.hs
eclogues-mock/src/Eclogues/State/: Monad.hs
eclogues-mock/src/Eclogues/Threads/: Server.hs
eclogues-mock/test/: HLint.hs
eclogues/src/Eclogues/: API.hs  Job.hs  ServantInstances.hs
eclogues/src/Eclogues/Job/: Aeson.hs  Resources.hs
eclogues/src/Text/Regex/: Cross.hs
eclogues/test/: HLint.hs  Spec.hs
eclogues/test/Eclogues/: JobSpec.hs
gen-hs/: Api_Consts.hs  Api_Types.hs  AuroraAdmin.hs  AuroraSchedulerManager.hs  AuroraSchedulerManager_Client.hs  AuroraSchedulerManager_Iface.hs  ReadOnlyScheduler.hs  ReadOnlyScheduler_Iface.hs
src/: AppConfig.hs  AuroraAPI.hs  AuroraConfig.hs  Client.hs  Main.hs  Scheduling.hs  Subexecutor.hs  TaskAPI.hs  TaskSpec.hs  Units.hs  Zookeeper.hs
src/Database/Zookeeper/: Election.hs  ManagedEvents.hs
src/Eclogues/: API.hs  ApiDocs.hs  AppConfig.hs  Client.hs  Instances.hs  Job.hs  JobSpec.hs  Paths.hs  Persist.hs  ServantInstances.hs  State.hs  TaskSpec.hs  Util.hs  Zookeeper.hs
src/Eclogues/Job/: Aeson.hs
src/Eclogues/JobSpec/: Aeson.hs
src/Eclogues/Persist/: Stage1.hs
src/Eclogues/Scheduling/: AuroraAPI.hs  AuroraConfig.hs  AuroraZookeeper.hs  Command.hs
src/Eclogues/State/: Monad.hs  Types.hs
test/: MockSpec.hs  MonitorSpec.hs  Spec.hs  StateSpec.hs  TestUtils.hs
test/Eclogues/: StateSpec.hs
test/Eclogues/Monitoring/: ClusterSpec.hs
