name: aurora-thrift
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright SSIL 2015
maintainer: rimmington@gmail.com
synopsis: Interface to Aurora scheduler via Thrift.
author: Rhys !

executable eclogues-api
    main-is: Main.hs
    build-depends:
        base >=4.7.0.1 && <4.8,
        text >=1.1.0.0 && <1.3,
        unordered-containers >=0.2.4.0 && <0.3,
        bytestring >=0.10.4.0 && <0.11,
        hashable >=1.2.2.0 && <1.3,
        QuickCheck >=2.6 && <2.9,
        vector >=0.10.9.1 && <0.11,
        network-uri >=2.6.0.3 && <2.7,
        thrift >=0.9.2 && <0.10,
        aeson >=0.8 && <0.10,
        void ==0.7.*,
        servant >=0.4.1 && <0.5,
        servant-server ==0.4.*,
        servant-docs >=0.4.1 && <0.5,
        servant-pandoc >=0.4.0 && <0.5,
        pandoc >=1.14.0.3 && <1.15,
        wai >=3.0.2.3 && <3.1,
        http-types >=0.8.6 && <0.9,
        transformers >=0.3.0.0 && <0.5,
        transformers-compat >=0.4.0.3 && <0.5,
        warp >=3.0.13.1 && <3.1,
        either >=4.4.1 && <4.5,
        directory >=1.2.1.0 && <1.3,
        stm-io-hooks >=1.0.1 && <1.1,
        async >=2.0.1.5 && <2.1,
        utility-ht >=0.0.10 && <0.1,
        mmorph >=1.0.4 && <1.1,
        hzk >=2.1.0 && <2.2,
        concurrent-extra >=0.7.0.9 && <0.8,
        lifted-base >=0.2.3.6 && <0.3,
        wai-cors >=0.2.2 && <0.3,
        persistent >=2.1.6 && <2.2,
        persistent-template >=2.1.3.3 && <2.2,
        persistent-sqlite >=2.1.4.2 && <2.2,
        monad-logger >=0.3.13.1 && <0.4,
        lens >=4.9.1 && <4.10,
        data-default-generics >=0.3 && <0.4,
        uuid >=1.3.10 && <1.4,
        uuid-aeson >=0.1 && <0.2,
        random >=1.0.1.1 && <1.2
    default-language: Haskell2010
    default-extensions: LambdaCase ScopedTypeVariables
    other-extensions: DeriveDataTypeable OverloadedStrings RankNTypes
                      MultiParamTypeClasses ScopedTypeVariables CPP FlexibleInstances
                      TypeSynonymInstances ExistentialQuantification TupleSections
                      TemplateHaskell DataKinds TypeOperators LambdaCase EmptyDataDecls
                      KindSignatures
    hs-source-dirs: src gen-hs
    ghc-options: -threaded -with-rtsopts=-N -Wall -Werror

executable eclogues-subexecutor
    main-is: Subexecutor.hs
    build-depends:
        base >=4.7.0.1 && <4.8,
        text >=1.1.0.0 && <1.3,
        aeson >=0.8 && <0.10,
        void ==0.7.*,
        bytestring >=0.10.4.0 && <0.11,
        process >=1.2.0.0 && <1.3,
        directory >=1.2.1.0 && <1.3,
        filepath >=1.3.0.2 && <1.4,
        cond >=0.4.1.1 && <0.5,
        lens >=4.9.1 && <4.10,
        uuid >=1.3.10 && <1.4,
        uuid-aeson >=0.1 && <0.2
    default-language: Haskell2010
    default-extensions: LambdaCase ScopedTypeVariables
    hs-source-dirs: src
    ghc-options: -threaded -with-rtsopts=-N -Wall -Werror

executable eclogues-client
    main-is: Client.hs
    build-depends:
        base >=4.7.0.1 && <4.8,
        text >=1.1.0.0 && <1.3,
        void ==0.7.*,
        bytestring >=0.10.4.0 && <0.11,
        transformers >=0.3.0.0 && <0.5,
        transformers-compat >=0.4.0.3 && <0.5,
        aeson >=0.8 && <0.10,
        hzk >=2.1.0 && <2.2,
        mmorph >=1.0.4 && <1.1,
        servant >=0.4.1 && <0.5,
        servant-client >=0.4.1 && <0.5,
        either >=4.4.1 && <4.5,
        http-types >=0.8.6 && <0.9,
        optparse-applicative >=0.11.0.2 && <0.12,
        xdg-basedir >=0.2.2 && <0.3,
        monad-loops >=0.4.2.1 && <0.5,
        directory >=1.2.1.0 && <1.3,
        stm-io-hooks >=1.0.1 && <1.1,
        concurrent-extra >=0.7.0.9 && <0.8,
        async >=2.0.1.5 && <2.1,
        lifted-base >=0.2.3.6 && <0.3,
        lens >=4.9.1 && <4.10,
        uuid >=1.3.10 && <1.4,
        uuid-aeson >=0.1 && <0.2
    default-language: Haskell2010
    default-extensions: LambdaCase ScopedTypeVariables
    other-extensions: TemplateHaskell
    hs-source-dirs: src
    ghc-options: -threaded -with-rtsopts=-N -Wall -Werror

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.7.0.1 && <4.8,
        text >=1.1.0.0 && <1.3,
        unordered-containers >=0.2.4.0 && <0.3,
        bytestring >=0.10.4.0 && <0.11,
        hashable >=1.2.2.0 && <1.3,
        QuickCheck >=2.6 && <2.9,
        vector >=0.10.9.1 && <0.11,
        network-uri >=2.6.0.3 && <2.7,
        thrift >=0.9.2 && <0.10,
        aeson >=0.8 && <0.10,
        void ==0.7.*,
        lens >=4.9.1 && <4.10,
        hspec <2.2
    default-language: Haskell2010
    default-extensions: LambdaCase ScopedTypeVariables
    hs-source-dirs: src gen-hs test
    ghc-options: -Wall
