name: eclogues
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) 2015 Swinburne Software Innovation Lab
maintainer: Rhys Adams <rhysadams@swin.edu.au>
synopsis: API and controller for Apache Aurora.

library
    exposed-modules:
        Database.Zookeeper.Election,
        Database.Zookeeper.ManagedEvents,
        Eclogues.API,
        Eclogues.Job,
        Eclogues.Paths,
        Eclogues.ServantInstances,
        Eclogues.Util
        Units
    other-modules:
        Eclogues.Job.Aeson
    build-depends:
        base >=4.7.0.1 && <4.9,
        text >=1.1.0.0 && <1.3,
        bytestring >=0.10.4.0 && <0.11,
        aeson >=0.8 && <0.10,
        servant >=0.4.1 && <0.5,
        transformers >=0.4.0.0 && <0.5,
        async >=2.0.1.5 && <2.1,
        hzk >=2.1.0 && <2.2,
        uuid >=1.3.10 && <1.4,
        uuid-aeson >=0.1 && <0.2,
        stm-io-hooks >=1.1.0,
        concurrent-extra >=0.7.0.9 && <0.8,
        lifted-base >=0.2.3.6 && <0.3,
        lens >=4.7.0.1 && <4.12,
        either >=4.3.4.1 && <4.5,
        mmorph >=1.0.4 && <1.1,
        path >=0.5,
        network-uri >=2.6,
        pcre-heavy,
        hashable
    default-language: Haskell2010
    default-extensions: LambdaCase ScopedTypeVariables
    other-extensions: DataKinds EmptyDataDecls ExtendedDefaultRules
                      FlexibleInstances KindSignatures MultiParamTypeClasses
                      OverloadedStrings TemplateHaskell TypeOperators
    hs-source-dirs: src
    ghc-options: -Wall -Werror

executable eclogues-api
    main-is: Main.hs
    build-depends:
        base >=4.7.0.1 && <4.9,
        text >=1.1.0.0 && <1.3,
        unordered-containers >=0.2.4.0 && <0.3,
        bytestring >=0.10.4.0 && <0.11,
        hashable >=1.2.2.0 && <1.3,
        QuickCheck >=2.6 && <2.9,
        vector >=0.10.9.1 && <0.11,
        network-uri >=2.6.0.3 && <2.7,
        thrift >=0.9.2 && <0.10,
        aeson >=0.8 && <0.10,
        servant >=0.4.1 && <0.5,
        servant-server ==0.4.*,
        servant-docs >=0.4.1 && <0.5,
        servant-pandoc >=0.4.0 && <0.5,
        pandoc >=1.13.2.1 && <1.16,
        http-types >=0.8.6 && <0.9,
        transformers >=0.4.0.0 && <0.5,
        warp >=3.0.13.1 && <3.1,
        either >=4.3.4.1 && <4.5,
        stm-io-hooks >=1.1.0,
        async >=2.0.1.5 && <2.1,
        hzk >=2.1.0 && <2.2,
        concurrent-extra >=0.7.0.9 && <0.8,
        wai-cors >=0.2.2 && <0.3,
        persistent >=2.1.6 && <2.3,
        persistent-template >=2.1.3.3 && <2.2,
        persistent-sqlite >=2.1.4.2 && <2.3,
        monad-logger >=0.3.13.1 && <0.4,
        lens >=4.7.0.1 && <4.12,
        data-default-generics >=0.3 && <0.4,
        uuid >=1.3.10 && <1.4,
        random >=1.0.1.1 && <1.2,
        time >= 1.4.2,
        http-media >= 0.6.2,
        mtl >=2.2,
        path >=0.5,
        path-io,
        eclogues ==0.1.0.0
    default-language: Haskell2010
    default-extensions: LambdaCase ScopedTypeVariables
    other-extensions: ConstraintKinds DataKinds DeriveDataTypeable DeriveGeneric
                      FlexibleContexts FlexibleInstances GADTs
                      GeneralizedNewtypeDeriving MultiParamTypeClasses
                      OverloadedStrings RankNTypes QuasiQuotes TemplateHaskell
                      TupleSections TypeFamilies TypeOperators
    hs-source-dirs: gen-hs app/api
    other-modules:
        Eclogues.ApiDocs,
        Eclogues.AppConfig,
        Eclogues.Persist,
        Eclogues.Persist.Stage1,
        Eclogues.Scheduling.AuroraAPI,
        Eclogues.Scheduling.AuroraConfig,
        Eclogues.Scheduling.AuroraZookeeper,
        Eclogues.Scheduling.Command,
        Eclogues.State,
        Eclogues.State.Monad,
        Eclogues.State.Types,
        Eclogues.Threads.Server,
        Eclogues.Threads.Update
    ghc-options: -threaded -with-rtsopts=-N -Wall -Werror

executable eclogues-subexecutor
    main-is: Main.hs
    build-depends:
        base >=4.7.0.1 && <4.9,
        text >=1.1.0.0 && <1.3,
        aeson >=0.8 && <0.10,
        process >=1.2.0.0 && <1.3,
        filepath >=1.3.0.2 && <1.5,
        lens >=4.7.0.1 && <4.12,
        Glob >=0.7.5 && <0.8,
        path,
        path-io,
        eclogues ==0.1.0.0
    default-language: Haskell2010
    default-extensions: LambdaCase ScopedTypeVariables
    other-extensions: TemplateHaskell
    hs-source-dirs: app/subexecutor
    ghc-options: -threaded -with-rtsopts=-N -Wall -Werror

executable eclogues-client
    main-is: Main.hs
    build-depends:
        base >=4.7.0.1 && <4.9,
        text >=1.1.0.0 && <1.3,
        bytestring >=0.10.4.0 && <0.11,
        transformers >=0.4.0.0 && <0.5,
        aeson >=0.8 && <0.10,
        hzk >=2.1.0 && <2.2,
        servant >=0.4.1 && <0.5,
        servant-client >=0.4.1 && <0.5,
        either >=4.3.4.1 && <4.5,
        optparse-applicative >=0.11.0.2 && <0.12,
        xdg-basedir >=0.2.2 && <0.3,
        monad-loops >=0.4.2.1 && <0.5,
        directory >=1.2.1.0 && <1.3,
        bifunctors >=4.1.1.1 && <6,
        unordered-containers >=0.2.4.0 && <0.3,
        lens,
        eclogues ==0.1.0.0
    default-language: Haskell2010
    default-extensions: LambdaCase ScopedTypeVariables
    other-extensions: TemplateHaskell
    hs-source-dirs: app/client
    other-modules:
        Eclogues.Client
    ghc-options: -threaded -with-rtsopts=-N -Wall -Werror

executable eclogues-mock
    main-is: MockMain.hs
    build-depends:
        base >=4.7.0.1 && <4.9,
        text >=1.1.0.0 && <1.3,
        unordered-containers >=0.2.4.0 && <0.3,
        bytestring >=0.10.4.0 && <0.11,
        hashable >=1.2.2.0 && <1.3,
        QuickCheck >=2.6 && <2.9,
        vector >=0.10.9.1 && <0.11,
        network-uri >=2.6.0.3 && <2.7,
        thrift >=0.9.2 && <0.10,
        aeson >=0.8 && <0.10,
        servant >=0.4.1 && <0.5,
        servant-server ==0.4.*,
        servant-docs >=0.4.1 && <0.5,
        servant-pandoc >=0.4.0 && <0.5,
        pandoc >=1.13.2.1 && <1.16,
        http-types >=0.8.6 && <0.9,
        transformers >=0.4.0.0 && <0.5,
        warp >=3.0.13.1 && <3.1,
        either >=4.3.4.1 && <4.5,
        stm-io-hooks >=1.1.0,
        async >=2.0.1.5 && <2.1,
        hzk >=2.1.0 && <2.2,
        concurrent-extra >=0.7.0.9 && <0.8,
        wai-cors >=0.2.2 && <0.3,
        persistent >=2.1.6 && <2.3,
        persistent-template >=2.1.3.3 && <2.2,
        persistent-sqlite >=2.1.4.2 && <2.3,
        monad-logger >=0.3.13.1 && <0.4,
        lens >=4.7.0.1 && <4.12,
        data-default-generics >=0.3 && <0.4,
        uuid >=1.3.10 && <1.4,
        random >=1.0.1.1 && <1.2,
        time >= 1.4.2,
        http-media >= 0.6.2,
        mtl >=2.2,
        path >=0.5,
        path-io,
        eclogues ==0.1.0.0
    default-language: Haskell2010
    default-extensions: LambdaCase ScopedTypeVariables
    hs-source-dirs: gen-hs app/api app/mock
    ghc-options: -threaded -with-rtsopts=-N -Wall -Werror

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.7.0.1 && <4.9,
        text >=1.1.0.0 && <1.3,
        unordered-containers >=0.2.4.0 && <0.3,
        bytestring >=0.10.4.0 && <0.11,
        hashable >=1.2.2.0 && <1.3,
        QuickCheck >=2.6 && <2.9,
        vector >=0.10.9.1 && <0.11,
        network-uri >=2.6.0.3 && <2.7,
        thrift >=0.9.2 && <0.10,
        aeson >=0.8 && <0.10,
        servant >=0.4.1 && <0.5,
        servant-server ==0.4.*,
        servant-docs >=0.4.1 && <0.5,
        servant-pandoc >=0.4.0 && <0.5,
        pandoc >=1.13.2.1 && <1.16,
        http-types >=0.8.6 && <0.9,
        transformers >=0.4.0.0 && <0.5,
        warp >=3.0.13.1 && <3.1,
        either >=4.3.4.1 && <4.5,
        stm-io-hooks >=1.1.0,
        async >=2.0.1.5 && <2.1,
        hzk >=2.1.0 && <2.2,
        concurrent-extra >=0.7.0.9 && <0.8,
        wai-cors >=0.2.2 && <0.3,
        persistent >=2.1.6 && <2.3,
        persistent-template >=2.1.3.3 && <2.2,
        persistent-sqlite >=2.1.4.2 && <2.3,
        monad-logger >=0.3.13.1 && <0.4,
        lens >=4.7.0.1 && <4.12,
        data-default-generics >=0.3 && <0.4,
        uuid >=1.3.10 && <1.4,
        random >=1.0.1.1 && <1.2,
        time >= 1.4.2,
        http-media >= 0.6.2,
        mtl >=2.2,
        path >=0.5,
        path-io,
        eclogues ==0.1.0.0,
        servant-client >=0.4.1 && <0.5,
        hspec <2.2
    default-language: Haskell2010
    default-extensions: LambdaCase ScopedTypeVariables
    other-extensions: OverloadedStrings
    hs-source-dirs: gen-hs app/api app/mock test
    ghc-options: -threaded -with-rtsopts=-N -Wall -Werror
    other-modules:
        StateSpec

source-repository head
  type: git
  location: git://github.com/rimmington/eclogues.git
