name: eclogues-impl
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: ../LICENSE
copyright: (c) 2015 Swinburne Software Innovation Lab
maintainer: Rhys Adams <rhysadams@swin.edu.au>, Shannon Pace <space@swin.edu.au>
synopsis: API and controller for Apache Aurora.

library
    exposed-modules:
        Eclogues.Paths,
        Eclogues.Util
    build-depends:
        base >=4.7.0.1 && <4.9,
        text >=1.1.0.0 && <1.3,
        bytestring >=0.10.4.0 && <0.11,
        aeson >=0.8 && <0.10,
        path >=0.5,
        eclogues ==0.1.0.0
    default-language: Haskell2010
    other-extensions: LambdaCase TemplateHaskell Trustworthy
    hs-source-dirs: src
    ghc-options: -Wall -Werror

executable eclogues-api
    main-is: Main.hs
    build-depends:
        base,
        text,
        unordered-containers,
        bytestring,
        hashable,
        QuickCheck,
        vector,
        network-uri,
        thrift,
        aeson,
        servant,
        servant-client,
        servant-server,
        servant-docs,
        servant-pandoc,
        pandoc,
        http-types,
        transformers,
        warp,
        either,
        stm-io-hooks,
        async,
        hzk,
        concurrent-extra,
        wai-cors,
        persistent,
        persistent-template,
        persistent-sqlite,
        monad-logger,
        lens,
        data-default-generics,
        uuid,
        random,
        time,
        http-media,
        mtl,
        path,
        path-io,
        containers,
        units,
        units-defs,
        digital-metrology-frontiers,
        aegle,
        hzk-elections,
        monad-control,
        transformers-base,
        eclogues ==0.1.0.0,
        eclogues-impl ==0.1.0.0
    default-language: Haskell2010
    default-extensions: LambdaCase ScopedTypeVariables
    other-extensions: ConstraintKinds DataKinds DeriveDataTypeable DeriveGeneric
                      FlexibleContexts FlexibleInstances GADTs GeneralizedNewtypeDeriving
                      MultiParamTypeClasses OverloadedStrings RankNTypes QuasiQuotes
                      TemplateHaskell TupleSections TypeFamilies TypeOperators
    hs-source-dirs: gen-hs app/api
    other-modules:
        Eclogues.ApiDocs,
        Eclogues.AppConfig,
        Eclogues.Persist,
        Eclogues.Persist.Stage1,
        Eclogues.Scheduling.AuroraAPI,
        Eclogues.Scheduling.AuroraConfig,
        Eclogues.Scheduling.AuroraZookeeper,
        Eclogues.Scheduling.Command,
        Eclogues.State,
        Eclogues.State.Monad,
        Eclogues.State.Types,
        Eclogues.Threads.Server,
        Eclogues.Threads.Update,
        Eclogues.Monitoring.Monitor,
        Eclogues.Monitoring.Cluster
    ghc-options: -threaded -with-rtsopts=-N -Wall -Werror

executable eclogues-subexecutor
    main-is: Main.hs
    build-depends:
        base,
        text,
        aeson,
        process,
        filepath,
        microlens,
        Glob,
        path,
        path-io,
        units-defs,
        digital-metrology-frontiers,
        eclogues ==0.1.0.0,
        eclogues-impl ==0.1.0.0
    default-language: Haskell2010
    default-extensions: LambdaCase ScopedTypeVariables
    other-extensions: TemplateHaskell
    hs-source-dirs: app/subexecutor
    ghc-options: -threaded -with-rtsopts=-N -Wall -Werror

executable eclogues-client
    main-is: Main.hs
    build-depends:
        base,
        text,
        bytestring,
        transformers,
        aeson,
        hzk,
        servant,
        servant-client,
        either,
        optparse-applicative,
        xdg-basedir,
        monad-loops,
        directory,
        bifunctors,
        unordered-containers,
        microlens,
        hzk-elections,
        eclogues ==0.1.0.0,
        eclogues-impl ==0.1.0.0
    default-language: Haskell2010
    default-extensions: LambdaCase ScopedTypeVariables
    other-extensions: TemplateHaskell
    hs-source-dirs: app/client
    other-modules:
        Eclogues.Client
    ghc-options: -threaded -with-rtsopts=-N -Wall -Werror

executable eclogues-mock
    main-is: MockMain.hs
    build-depends:
        base,
        text,
        unordered-containers,
        bytestring,
        hashable,
        QuickCheck,
        vector,
        network-uri,
        thrift,
        aeson,
        servant,
        servant-server,
        servant-docs,
        servant-pandoc,
        pandoc,
        http-types,
        transformers,
        warp,
        either,
        stm-io-hooks,
        async,
        hzk,
        concurrent-extra,
        wai-cors,
        persistent,
        persistent-template,
        persistent-sqlite,
        monad-logger,
        lens,
        data-default-generics,
        uuid,
        random,
        time,
        http-media,
        mtl,
        path,
        path-io,
        containers,
        servant-client,
        units,
        units-defs,
        digital-metrology-frontiers,
        transformers-base,
        eclogues ==0.1.0.0,
        eclogues-impl ==0.1.0.0
    default-language: Haskell2010
    default-extensions: LambdaCase ScopedTypeVariables
    hs-source-dirs: gen-hs app/api app/mock
    ghc-options: -threaded -with-rtsopts=-N -Wall -Werror

test-suite hspec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base,
        text,
        unordered-containers,
        bytestring,
        hashable,
        QuickCheck,
        vector,
        network-uri,
        thrift,
        aeson,
        servant,
        servant-server,
        servant-docs,
        servant-pandoc,
        pandoc,
        http-types,
        transformers,
        warp,
        either,
        stm-io-hooks,
        async,
        hzk,
        concurrent-extra,
        wai-cors,
        persistent,
        persistent-template,
        persistent-sqlite,
        monad-logger,
        lens,
        data-default-generics,
        uuid,
        random,
        time,
        http-media,
        mtl,
        path,
        path-io,
        containers,
        units,
        units-defs,
        digital-metrology-frontiers,
        servant-client,
        hzk-elections,
        monad-control,
        transformers-base,
        eclogues ==0.1.0.0,
        eclogues-impl ==0.1.0.0,
        hspec <2.2
    default-language: Haskell2010
    default-extensions: LambdaCase ScopedTypeVariables
    other-extensions: OverloadedStrings
    hs-source-dirs: gen-hs app/api app/mock test
    ghc-options: -threaded -with-rtsopts=-N -Wall -Werror
    other-modules:
        Eclogues.MockSpec,
        Eclogues.Monitoring.ClusterSpec,
        Eclogues.Scheduling.AuroraConfigSpec,
        Eclogues.StateSpec,
        Spec,
        TestUtils

test-suite hlint
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             HLint.hs
  build-depends:       base
                     , hlint
  default-language:    Haskell2010

source-repository head
  type: git
  location: git://github.com/rimmington/eclogues.git
