name: eclogues
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: ../LICENSE
copyright: (c) 2015 Swinburne Software Innovation Lab
maintainer: Rhys Adams <rhysadams@swin.edu.au>
synopsis: API and types for Eclogues interaction.

data-dir: ..
data-files: HLint.hints

library
    exposed-modules:
        Eclogues.API,
        Eclogues.Job,
        Eclogues.ServantInstances
    other-modules:
        Eclogues.Job.Aeson,
        Eclogues.Job.Resources,
        Text.Regex.Cross
    build-depends:
        base >=4.7.0.1 && <4.9,
        text >=1.1.0.0 && <1.3,
        bytestring >=0.10.4.0 && <0.11,
        aeson >=0.8 && <0.10,
        servant >=0.4.1 && <0.5,
        transformers >=0.4.0.0 && <0.5,
        uuid-types,
        uuid-aeson >=0.1 && <0.2,
        path >=0.5,
        network-uri >=2.6,
        hashable,
        units,
        units-defs,
        units-attoparsec,
        digital-metrology-frontiers,
        attoparsec,
        microlens,
        microlens-th,
        deepseq
    default-language: Haskell2010
    other-extensions: CPP DataKinds ExtendedDefaultRules FlexibleInstances
                      GeneralizedNewtypeDeriving LambdaCase OverloadedStrings
                      QuasiQuotes ScopedTypeVariables TemplateHaskell
                      Trustworthy TypeFamilies TypeOperators
    hs-source-dirs: src
    ghc-options: -Wall -Werror

    if impl(ghcjs)
        build-depends: ghcjs-base
                     , template-haskell
        cpp-options:   -DGhcjsBase
    else
        build-depends: pcre-heavy

test-suite hspec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base,
        aeson,
        bytestring,
        units-defs,
        digital-metrology-frontiers,
        path,
        eclogues ==0.1.0.0,
        neat-interpolation,
        QuickCheck,
        hspec
    default-language: Haskell2010
    default-extensions: LambdaCase ScopedTypeVariables
    other-extensions: FlexibleContexts OverloadedStrings QuasiQuotes
                      TemplateHaskell TypeFamilies
    hs-source-dirs: test
    ghc-options: -threaded -with-rtsopts=-N -Wall -Werror
    other-modules:
        Eclogues.JobSpec

test-suite hlint
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             HLint.hs
    other-modules:
        Paths_eclogues
    build-depends:       base
                       , hlint
    default-language:    Haskell2010
