name: eclogues
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: ../LICENSE
copyright: (c) 2015 Swinburne Software Innovation Lab
maintainer: Rhys Adams <rhysadams@swin.edu.au>
synopsis: API and types for Eclogues interaction.

library
    exposed-modules:
        Eclogues.API,
        Eclogues.Job,
        Eclogues.ServantInstances
    other-modules:
        Eclogues.Job.Aeson,
        Eclogues.Job.Resources
    build-depends:
        base >=4.7.0.1 && <4.9,
        text >=1.1.0.0 && <1.3,
        bytestring >=0.10.4.0 && <0.11,
        aeson >=0.8 && <0.10,
        servant >=0.4.1 && <0.5,
        transformers >=0.4.0.0 && <0.5,
        uuid >=1.3.10 && <1.4,
        uuid-aeson >=0.1 && <0.2,
        lens >=4.7.0.1 && <4.14,
        path >=0.5,
        network-uri >=2.6,
        pcre-heavy,
        hashable,
        units,
        units-defs,
        units-attoparsec,
        digital-metrology-frontiers,
        attoparsec
    default-language: Haskell2010
    other-extensions: DataKinds ExtendedDefaultRules FlexibleInstances
                      GeneralizedNewtypeDeriving LambdaCase OverloadedStrings
                      QuasiQuotes ScopedTypeVariables TemplateHaskell
                      Trustworthy TypeFamilies TypeOperators
    hs-source-dirs: src
    ghc-options: -Wall -Werror
